# Advent_of_code_2022

./: CMakeLists.txt  README.md
0_Template/: CMakeLists.txt  main.cpp
Day01/: CMakeLists.txt  Elf.cpp  Elf.h  Elves.cpp  Elves.h  main.cpp
Day02/: CMakeLists.txt  Match.h  Round.h  main.cpp  match.cpp  round.cpp
Day03/: CMakeLists.txt  Rucksack.cpp  Rucksack.h  Supplies.cpp  Supplies.h  main.cpp
Day04/: Assignments.cpp  Assignments.h  CMakeLists.txt  Elf_Pairs.cpp  Elf_pairs.h  main.cpp
Day05/: CMakeLists.txt  Cargo.cpp  Cargo.h  Procedure.cpp  Procedure.h  main.cpp
Day06/: CMakeLists.txt  Comms.cpp  Comms.h  main.cpp
Day07/: CMakeLists.txt  Directory.cpp  Directory.h  Filesystem.cpp  Filesystem.h  main.cpp
Day08/: CMakeLists.txt  Forest.cpp  Forest.h  Tree.cpp  Tree.h  main.cpp
Day09/: Bridge.cpp  Bridge.h  CMakeLists.txt  main.cpp
Day10/: CMakeLists.txt  GPU.cpp  GPU.h  main.cpp
Day11/: CMakeLists.txt  Monkey.cpp  Monkey.h  Monkeys.cpp  Monkeys.h  main.cpp
Day12/: CMakeLists.txt  Map.cpp  Map.h  main.cpp
Day13/: CMakeLists.txt  ListOfPackets.cpp  ListOfPackets.h  PacketList.cpp  PacketList.h  main.cpp
Day14/: CMakeLists.txt  Cave.cpp  Cave.h  main.cpp
Day15/: CMakeLists.txt  Sensors_and_Beacons.cpp  Sensors_and_Beacons.h  main.cpp
Day16/: CMakeLists.txt  Valves.cpp  Valves.h  main.cpp
Day17/: CMakeLists.txt  Tetris_rocks.cpp  Tetris_rocks.h  main.cpp
Day18/: CMakeLists.txt  LavaDroplets.cpp  LavaDroplets.h  main.cpp
Day19/: CMakeLists.txt  Robots.cpp  Robots.h  main.cpp
Day20/: CMakeLists.txt  EncryptedCoordinates.cpp  main.cpp  (+1 more)
(+4 files in other folders)
